fix wrap

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -164,8 +164,7 @@ iframe.video {
 
 .nav > .container {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-flow: row wrap;
   gap: 30px;
   padding-top: 200px;
 }
